chore: js codegen interface design, IO